--- a/web_dev_udemy/transition/index.html
+++ b/web_dev_udemy/transition/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <h1>Hello</h1>
-    <section>
-        <div></div>
-    </section>
+    <h2>Transition</h2>
+    <div class="circle"></div>
 </body>
 </html>
