--- a/web_dev_udemy/JavaScript/index.html
+++ b/web_dev_udemy/JavaScript/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-    <h2>Transition</h2>
-    <div class="circle"></div>
+    <h2>JavaScript</h2>
+    <!-- <div class="circle"></div> -->
+    <script src="app.js"></script>
+
 </body>
 </html>
