--- a/web_dev_udemy/Bootstrap/bootstrap.html
+++ b/web_dev_udemy/Bootstrap/bootstrap.html
@@ -12,6 +12,7 @@
 <body>
     <div class="container">
         <h1>Placeholder</h1>
+        <button type="button" class="btn btn-primary">Primary</button>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus consectetur alias eveniet explicabo at adipisci. Modi necessitatibus aliquam, in architecto corrupti facilis ex rem ratione omnis dolores esse nobis natus.
         Ipsa eveniet veritatis voluptates quia sapiente cum vel maxime fuga cumque sit. Sed facere unde voluptate tenetur quia deserunt quis fugiat corporis repellat dolores numquam, temporibus delectus, nulla consequatur dolorem?
         Quidem magni repellendus officiis ratione quia dignissimos voluptatem velit, quas illum modi error neque, beatae quisquam illo nulla deserunt ipsa ex perferendis, architecto minima deleniti. Quibusdam mollitia in ipsa pariatur!</p>
@@ -29,3 +30,4 @@
 </body>
 
 </html>
+
