--- a/web_dev_udemy/ToDo/todo.html
+++ b/web_dev_udemy/ToDo/todo.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="app.css">
+    <title>ToDo</title>
 </head>
 <body>
-    <button>Hover Me</button>
+    <script src="todo.js"></script>
 </body>
 </html>
