--- a/web_dev_udemy/Bootstrap/bootstrap.html
+++ b/web_dev_udemy/Bootstrap/bootstrap.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8" />
     <title>Bootstrap Lesson</title>
     <!--BOOTSTRAP読み込み-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="app.css">
 </head>
 
@@ -13,10 +14,35 @@
     <div class="container">
         <h1>Placeholder</h1>
         <button type="button" class="btn btn-primary">Primary</button>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus consectetur alias eveniet explicabo at adipisci. Modi necessitatibus aliquam, in architecto corrupti facilis ex rem ratione omnis dolores esse nobis natus.
-        Ipsa eveniet veritatis voluptates quia sapiente cum vel maxime fuga cumque sit. Sed facere unde voluptate tenetur quia deserunt quis fugiat corporis repellat dolores numquam, temporibus delectus, nulla consequatur dolorem?
-        Quidem magni repellendus officiis ratione quia dignissimos voluptatem velit, quas illum modi error neque, beatae quisquam illo nulla deserunt ipsa ex perferendis, architecto minima deleniti. Quibusdam mollitia in ipsa pariatur!</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus consectetur alias eveniet explicabo at
+            adipisci. Modi necessitatibus aliquam, in architecto corrupti facilis ex rem ratione omnis dolores esse
+            nobis natus.
+            Ipsa eveniet veritatis voluptates quia sapiente cum vel maxime fuga cumque sit. Sed facere unde voluptate
+            tenetur quia deserunt quis fugiat corporis repellat dolores numquam, temporibus delectus, nulla consequatur
+            dolorem?
+            Quidem magni repellendus officiis ratione quia dignissimos voluptatem velit, quas illum modi error neque,
+            beatae quisquam illo nulla deserunt ipsa ex perferendis, architecto minima deleniti. Quibusdam mollitia in
+            ipsa pariatur!</p>
+        <h2 class="display-4">Reponsive Grid</h2>
+        <div class="row">
+            <div class="col-md-6 col-xl-3 bg-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut maxime laboriosam odio dolor nemo exercitationem qui modi tenetur officia. Fugit, aspernatur suscipit ut vitae nam ex dolorum accusamus blanditiis tempora!</div>
+            <div class="col-md-6 col-xl-3 bg-warning">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut maxime laboriosam odio dolor nemo exercitationem qui modi tenetur officia. Fugit, aspernatur suscipit ut vitae nam ex dolorum accusamus blanditiis tempora!</div>
+            <div class="col-md-6 col-xl-3 bg-primary">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut maxime laboriosam odio dolor nemo exercitationem qui modi tenetur officia. Fugit, aspernatur suscipit ut vitae nam ex dolorum accusamus blanditiis tempora!</div>
+            <div class="col-md-6 col-xl-3 bg-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut maxime laboriosam odio dolor nemo exercitationem qui modi tenetur officia. Fugit, aspernatur suscipit ut vitae nam ex dolorum accusamus blanditiis tempora!</div>
+        </div>
+        <div class="row no-gutters" >
+            <div class="col-xl-4 col-md-6">
+                <img src="https://plus.unsplash.com/premium_photo-1681400783826-8ae188a981b7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDF8Q0R3dXdYSkFiRXd8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="1" class="img-fluid">
+            </div>
+            <div class="col-xl-4 col-md-6">
+                <img src="https://plus.unsplash.com/premium_photo-1679347999601-b995d28ae3a1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDR8Q0R3dXdYSkFiRXd8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=400&q=60" alt="2" class="img-fluid">
+            </div>
+            <div class="col-xl-4 col-md-6">
+                <img src="https://plus.unsplash.com/premium_photo-1687899035940-12eeb21d747f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHx0b3BpYy1mZWVkfDExfENEd3V3WEpBYkV3fHxlbnwwfHx8fHw%3D&auto=format&fit=crop&w=400&q=60" alt="3" class="img-fluid">
+            </div>
+        </div>
     </div>
+
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
@@ -30,4 +56,3 @@
 </body>
 
 </html>
-
